test/functions/fcf/Issue5544.good
Issue5544.chpl:5: In function 'test':
Issue5544.chpl:6: error: cannot capture proc because it refers to outer variables
Issue5544.chpl:6: note: such as 'k', here
